--- a/test/index.html
+++ b/test/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reponsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header class="header">
         <div class="header--left">
@@ -19,6 +22,18 @@
                 <a href="#">Pricing</a>
                 <a href="#">Support</a>
             </nav>
+            <div class="mobile--menu--container">
+            <nav class="mobile--menu">
+                <ul>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Sign In</a></li>
+                    <li><button class="start-trial">Start Free Trial</button></li>
+            </ul>
+            </nav>
+        </div>
         </div>
         <div class="header--right">
             <a href="#" class="sign-in">Sign In</a>
@@ -28,14 +43,15 @@
             <i class="fa-solid fa-bars"></i>
     </header>
 
-    <div class="main">
+    <div class="main"> 
         <div class="main--content">
             <div class="main--left">
-                <h1>A special credit card made for Developers.</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vehicula massa in enim luctus. Rutrum arcu.</p>
-                <div class="email-outsider">
+                 <h1>A special credit card made for Developers.</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vehicula massa in enim luctus. Rutrum arcu.
+                </p>
+                 <div class="email-outsider">
                     <div class="email">
-                    <input type="email" placeholder="Enter email address" class="email">
+                        <input type="email" placeholder="Enter email address" class="email">
                     </div>
                     <button>Get Free Card</button>
                 </div>
@@ -61,7 +77,7 @@
             <div class="main--right">
                 <img src="1.jpg" alt="Credit Card">
             </div>
-            
+
         </div>
 
         <div class="product--list">
@@ -132,4 +148,5 @@
     </footer>
     <script src="main.js"></script>
 </body>
+
 </html>
